# mapas_BotasPuestas

./: .gitignore  PLAN.md  README.md  pyproject.toml
.github/workflows/: pages.yml
app/: app.py  requirements.txt
app/config/: clasificacion.yml  constructor.yml  mapas.yml
app/www/: route-state.js  styles.css
docs/: flujo-de-datos-rutas.md
rutas/2026-07-19-morning-hike/: ruta.gpx  ruta.yml
rutas/_candidatas/gilles/: README.md  elevacion-dem.json  extraccion.json  indice.csv
rutas/_candidatas/gilles/gilles-001-aire-a-meztitla/: ruta.gpx  ruta.yml
rutas/_candidatas/gilles/gilles-002-aire-a-sd/: ruta.gpx  ruta.yml
rutas/_candidatas/gilles/gilles-003-aire-conexion-1/: ruta.gpx  ruta.yml
rutas/_candidatas/gilles/gilles-004-aire-conexion-2/: ruta.gpx  ruta.yml
rutas/_candidatas/gilles/gilles-005-aire-conexion-3/: ruta.gpx  ruta.yml
rutas/_candidatas/gilles/gilles-006-aire-cumbre/: ruta.gpx  ruta.yml
rutas/_candidatas/gilles/gilles-007-aire-cumbre-1/: ruta.gpx  ruta.yml
rutas/_candidatas/gilles/gilles-008-aire-cumbre-2/: ruta.gpx  ruta.yml
rutas/_candidatas/gilles/gilles-009-aire-cumbre-3/: ruta.gpx  ruta.yml
rutas/_candidatas/gilles/gilles-010-aire-los-miradores/: ruta.gpx  ruta.yml
rutas/milpa-alta-santo-domingo-2026/: ruta.gpx  ruta.yml
scripts/: __init__.py  build_content.py  build_elevation_cache.py  extract_legacy_routes.py  version_shinylive_export.py  visualize_legacy_gpx.py
tests/: test_app.py  test_content.py  test_extract_legacy_routes.py  test_metrics.py  test_version_shinylive_export.py
(+368 files in other folders)
